specify location for output/Error logfiles to be written. subdir of scripts dir.

--- a/Generate_subject_specific_HCPipe_parameters.ipynb
+++ b/Generate_subject_specific_HCPipe_parameters.ipynb
@@ -147,10 +147,13 @@
     "#path on BIH cluster: raw data & results\n",
     "rawdata_remote_path = \"/path/to/raw/on/remoteComputer\"\n",
     "results_path = \"/path/to/remote/resultsDir\"\n",
+    "\n",
     "scratchPath=\"/path/to/remote/scratchDir\" #directory for MRtrix to create large tck files\n",
     "\n",
     "# local path: where to write the qsub submitters\n",
-    "scripts_folder = \"/path/to/write/batchSubmitterScripts\""
+    "scripts_folder = \"/path/to/write/batchSubmitterScripts\"\n",
+    "\n",
+    "logDir = scripts_folder+\"/logDir\""
    ]
   },
   {
@@ -200,7 +203,7 @@
     "    if params_struct == False: continue # i.e. if Scanner Manufacturer == Philips/GE or unlisted\n",
     "\n",
     "    # print to files\n",
-    "    batch_prefreesurf_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic01_prefreesurf.sh \"\n",
+    "    batch_prefreesurf_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic01_prefreesurf.sh \"\n",
     "                          +results_path+\" \" \n",
     "                          +sub+\" \"\n",
     "                          +params_struct[0]+\" \"             # T1w image\n",
@@ -216,12 +219,12 @@
     "                          +params_struct[10]                # UnwarpDirStruct\n",
     "                          + \"\\n\")\n",
     "\n",
-    "    batch_freesurf_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic02_freesurf.sh \"\n",
+    "    batch_freesurf_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic02_freesurf.sh \"\n",
     "                          +results_path+\" \"\n",
     "                          +sub+\" \"\n",
     "                          +\"\\n\")\n",
     "\n",
-    "    batch_postfreesurf_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic03_postfreesurf.sh \"\n",
+    "    batch_postfreesurf_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic03_postfreesurf.sh \"\n",
     "                              +results_path+\" \"\n",
     "                              +sub+\" \"\n",
     "                              +\"\\n\")\n",
@@ -236,7 +239,7 @@
     "    if params_fmri == False: continue # i.e. if Scanner Manufacturer == Philips/GE or unlisted\n",
     "\n",
     "    # print to list\n",
-    "    batch_fmri_volume_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic04_fmri_volume.sh \"+\n",
+    "    batch_fmri_volume_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic04_fmri_volume.sh \"+\n",
     "                                  results_path+\" \"+\n",
     "                                  sub+\" \"+\n",
     "                                  params_fmri[0]+\" \"+        # UnwarpDirfMRI\n",
@@ -249,7 +252,7 @@
     "                                  params_fmri[4]+\"\\n\"        # FinalFMRIResolution\n",
     "                                  )\n",
     "\n",
-    "    batch_fmri_surface_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic05_fmri_surface.sh \"+\n",
+    "    batch_fmri_surface_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic05_fmri_surface.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\" \"+\n",
     "                              params_fmri[4]+\"\\n\")\n",
@@ -259,12 +262,12 @@
     "    ######### FIX ########\n",
     "    #######################\n",
     "\n",
-    "    batch_icafix_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic06_icafix.sh \"+\n",
+    "    batch_icafix_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic06_icafix.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\" \"+\n",
     "                              results_path+\"/\"+sub+\"/MNINonLinear/Results/Restingstate/Restingstate.nii.gz\"+\"\\n\")\n",
     "\n",
-    "    batch_postfix_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic07_postfix.sh \"+\n",
+    "    batch_postfix_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic07_postfix.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\"\\n\")\n",
     "\n",
@@ -273,12 +276,12 @@
     "    ####### MSM all #######\n",
     "    #######################\n",
     "\n",
-    "    batch_msmall_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic08_msmall.sh \"+\n",
+    "    batch_msmall_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic08_msmall.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\"\\n\"+\n",
     "                              \"sleep 1m\"+\"\\n\")\n",
     "\n",
-    "    batch_dedriftresample_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic09_dedriftresample.sh \"+\n",
+    "    batch_dedriftresample_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic09_dedriftresample.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\"\\n\"+\n",
     "                              \"sleep 1m\"+\"\\n\")\n",
@@ -291,7 +294,7 @@
     "    #get scan params and file names\n",
     "    dwi_params = DWI_scan_params(rawdata_remote_path, rawdata_local_path, sub)\n",
     "\n",
-    "    batch_denoise_preproc_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic10_denoise_preproc.sh \"+\n",
+    "    batch_denoise_preproc_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic10_denoise_preproc.sh \"+\n",
     "                             results_path+\" \"+\n",
     "                             sub+\" \"+\n",
     "                             dwi_params[0]+\" \"+    # DWI image\n",
@@ -299,29 +302,29 @@
     "                             dwi_params[2]+\" \"+    # DWI bval\n",
     "                             dwi_params[3]+\"\\n\")   # Phase-encoding dir\n",
     "\n",
-    "    batch_dwibiascorrect_dwi2mask_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic11_dwi_distortionCorrection.sh \"+\n",
+    "    batch_dwibiascorrect_dwi2mask_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic11_dwi_distortionCorrection.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub +\" \"+\n",
     "                            dwi_params[4]+\"\\n\")       # PE dir as 0x1x0 (ie. like ANTS format))\n",
     "\n",
     "    #####batch_dwiintensitynorm_list comes later, outside loop.\n",
     "\n",
-    "    batch_T1w2dwi_5ttgen_dwi2response_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic13_T1w2dwi_5ttgen_dwi2response.sh \"+\n",
+    "    batch_T1w2dwi_5ttgen_dwi2response_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic13_T1w2dwi_5ttgen_dwi2response.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub+\"\\n\") \n",
     "\n",
     "    #batch_average_response_list.sh comes later, outside loop.\n",
     "    \n",
-    "    batch_dwi_2fod_tckgen_sift2_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic15_dwi_2fod_tckgen_sift2.sh \"+\n",
+    "    batch_dwi_2fod_tckgen_sift2_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic15_dwi_2fod_tckgen_sift2.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub+\" \"+\n",
     "                            scratchPath+\"\\n\")\n",
     "\n",
-    "    batch_create_diffusion_mask_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic16_create_diffusion_mask.sh \"+\n",
+    "    batch_create_diffusion_mask_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic16_create_diffusion_mask.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub+\"\\n\")\n",
     "\n",
-    "    batch_tck2connectome_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic17_tck2connectome.sh \"+\n",
+    "    batch_tck2connectome_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic17_tck2connectome.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub+\"\\n\")\n",
     "\n",
@@ -333,14 +336,14 @@
     "\n",
     "    pet_params = PET_scan_params(rawdata_remote_path, rawdata_local_path, sub)\n",
     "\n",
-    "    batch_extract_PET_data_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic18_extract_PET_data.sh \"+\n",
+    "    batch_extract_PET_data_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic18_extract_PET_data.sh \"+\n",
     "                                sub+\" \"+\n",
     "                                pet_params[0]+\" \"+\n",
     "                                pet_params[1]+\"\\n\")\n",
     "\n",
     "\n",
     "\n",
-    "    batch_extract_fmri_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic19_extract_fmri.sh \"+\n",
+    "    batch_extract_fmri_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic19_extract_fmri.sh \"+\n",
     "                                results_path+\" \"+\n",
     "                                sub+\" \"+\n",
     "                                \"Restingstate\"+\"\\n\")\n",
@@ -366,12 +369,12 @@
     "\n",
     "#batch12_dwiintensitynorm\n",
     "batch_dwiintensitynorm_list = open(scripts_folder+\"/batch12_dwiintensitynorm.sh\",\"w\") #only one line: uses all subs. write outside loop.\n",
-    "batch_dwiintensitynorm_list.write(\"qsub -o output_dwiintensitynorm.txt -e error_dwiintensitynorm.txt generic12_dwiintensitynorm.sh\"+\" \"+results_path)\n",
+    "batch_dwiintensitynorm_list.write(\"qsub -o \"+logDir+\"/output_dwiintensitynorm.txt -e \"+logDir+\"/error_dwiintensitynorm.txt generic12_dwiintensitynorm.sh\"+\" \"+results_path)\n",
     "batch_dwiintensitynorm_list.close()\n",
     "\n",
     "#batch14_averageresponse\n",
     "batch_averageresponse_list = open(scripts_folder+\"/batch14_averageresponse.sh\",\"w\") #only one line: uses all subs. write outside loop.\n",
-    "batch_averageresponse_list.write(\"qsub -o output_averageresponse.txt -e error_averageresponse.txt generic14_averageresponse.sh\"+\" \"+results_path)\n",
+    "batch_averageresponse_list.write(\"qsub -o \"+logDir+\"/output_averageresponse.txt -e \"+logDir+\"/error_averageresponse.txt generic14_averageresponse.sh\"+\" \"+results_path)\n",
     "batch_averageresponse_list.close()"
    ]
   },
