ants "use histogram matching" in distortion correction script. Edit jupyter script that calls this to add $4 & $5

--- a/Generate_subject_specific_HCPipe_parameters.ipynb
+++ b/Generate_subject_specific_HCPipe_parameters.ipynb
@@ -305,7 +305,9 @@
     "    batch_dwibiascorrect_dwi2mask_list.write(\"qsub -o \"+logDir+\"/output_\"+sub+\".txt -e \"+logDir+\"/error_\"+sub+\".txt generic11_dwi_distortionCorrection.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub +\" \"+\n",
-    "                            dwi_params[4]+\"\\n\")       # PE dir as 0x1x0 (ie. like ANTS format))\n",
+    "                            dwi_params[4]+\" \"+ # PE dir as 0x1x0 (ie. like ANTS format))\n",
+    "                            \"True \"+           # \"Use Jacobian\"\n",
+    "                            \"True\" + \"\\n\")     # \"Use bias field\"\n",
     "\n",
     "    #####batch_dwiintensitynorm_list comes later, outside loop.\n",
     "\n",
