changed sbatch arguments inside generic scripts to fit slurm

--- a/Generate_subject_specific_HCPipe_parameters.ipynb
+++ b/Generate_subject_specific_HCPipe_parameters.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "The HCP Pipeline is used for structural and functional processing (incl.: PreFreeSurfer, FreeSurfer, PostFreeSurfer, fMRI Volume, fMRI Surface, ICAFIX, PostFIX, MSMAll, DedriftResample). Remaining processing done via non-HCP scripts (incl.:diffusion, PET).\n",
     "\n",
-    "For each step in the pipeline, we want batch job submitter scripts, containing \"qsub ...\" commands for each subject for that step. The qsub commands call \"generic\" wrapper scripts (for single subjects). These generic scripts, in turn, call the \"actual\" scripts (e.g. HCP pipeline scripts).\n",
+    "For each step in the pipeline, we want batch job submitter scripts, containing \"sbatch ...\" commands for each subject for that step. The sbatch commands call \"generic\" wrapper scripts (for single subjects). These generic scripts, in turn, call the \"actual\" scripts (e.g. HCP pipeline scripts).\n",
     "\n",
     "The number in the batch submitter filenames indicate the order in which they are to be executed."
    ]
@@ -150,7 +150,7 @@
     "\n",
     "scratchPath=\"/path/to/remote/scratchDir\" #directory for MRtrix to create large tck files\n",
     "\n",
-    "# local path: where to write the qsub submitters\n",
+    "# local path: where to write the sbatch submitters\n",
     "scripts_folder = \"/path/to/write/batchSubmitterScripts\""
    ]
   },
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "# write the qsub command to these files for each subject\n",
+    "# write the sbatch command to these files for each subject\n",
     "batch_prefreesurf_list                 = open(scripts_folder+\"/batch01_prefreesurf.sh\",\"w\")\n",
     "batch_freesurf_list                    = open(scripts_folder+\"/batch02_freesurf.sh\",\"w\")\n",
     "batch_postfreesurf_list                = open(scripts_folder+\"/batch03_postfreesurf.sh\",\"w\")\n",
@@ -201,7 +201,7 @@
     "    if params_struct == False: continue # i.e. if Scanner Manufacturer == Philips/GE or unlisted\n",
     "\n",
     "    # print to files\n",
-    "    batch_prefreesurf_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic01_prefreesurf.sh \"\n",
+    "    batch_prefreesurf_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic01_prefreesurf.sh \"\n",
     "                          +results_path+\" \" \n",
     "                          +sub+\" \"\n",
     "                          +params_struct[0]+\" \"             # T1w image\n",
@@ -217,12 +217,12 @@
     "                          +params_struct[10]                # UnwarpDirStruct\n",
     "                          + \"\\n\")\n",
     "\n",
-    "    batch_freesurf_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic02_freesurf.sh \"\n",
+    "    batch_freesurf_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic02_freesurf.sh \"\n",
     "                          +results_path+\" \"\n",
     "                          +sub+\" \"\n",
     "                          +\"\\n\")\n",
     "\n",
-    "    batch_postfreesurf_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic03_postfreesurf.sh \"\n",
+    "    batch_postfreesurf_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic03_postfreesurf.sh \"\n",
     "                              +results_path+\" \"\n",
     "                              +sub+\" \"\n",
     "                              +\"\\n\")\n",
@@ -237,7 +237,7 @@
     "    if params_fmri == False: continue # i.e. if Scanner Manufacturer == Philips/GE or unlisted\n",
     "\n",
     "    # print to list\n",
-    "    batch_fmri_volume_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic04_fmri_volume.sh \"+\n",
+    "    batch_fmri_volume_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic04_fmri_volume.sh \"+\n",
     "                                  results_path+\" \"+\n",
     "                                  sub+\" \"+\n",
     "                                  params_fmri[0]+\" \"+        # UnwarpDirfMRI\n",
@@ -250,7 +250,7 @@
     "                                  params_fmri[4]+\"\\n\"        # FinalFMRIResolution\n",
     "                                  )\n",
     "\n",
-    "    batch_fmri_surface_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic05_fmri_surface.sh \"+\n",
+    "    batch_fmri_surface_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic05_fmri_surface.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\" \"+\n",
     "                              params_fmri[4]+\"\\n\")\n",
@@ -260,12 +260,12 @@
     "    ######### FIX ########\n",
     "    #######################\n",
     "\n",
-    "    batch_icafix_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic06_icafix.sh \"+\n",
+    "    batch_icafix_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic06_icafix.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\" \"+\n",
     "                              results_path+\"/\"+sub+\"/MNINonLinear/Results/Restingstate/Restingstate.nii.gz\"+\"\\n\")\n",
     "\n",
-    "    batch_postfix_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic07_postfix.sh \"+\n",
+    "    batch_postfix_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic07_postfix.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\"\\n\")\n",
     "\n",
@@ -274,12 +274,12 @@
     "    ####### MSM all #######\n",
     "    #######################\n",
     "\n",
-    "    batch_msmall_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic08_msmall.sh \"+\n",
+    "    batch_msmall_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic08_msmall.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\"\\n\"+\n",
     "                              \"sleep 1m\"+\"\\n\")\n",
     "\n",
-    "    batch_dedriftresample_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic09_dedriftresample.sh \"+\n",
+    "    batch_dedriftresample_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic09_dedriftresample.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\"\\n\"+\n",
     "                              \"sleep 1m\"+\"\\n\")\n",
@@ -292,7 +292,7 @@
     "    #get scan params and file names\n",
     "    dwi_params = DWI_scan_params(rawdata_remote_path, rawdata_local_path, sub)\n",
     "\n",
-    "    batch_denoise_preproc_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic10_denoise_preproc.sh \"+\n",
+    "    batch_denoise_preproc_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic10_denoise_preproc.sh \"+\n",
     "                             results_path+\" \"+\n",
     "                             sub+\" \"+\n",
     "                             dwi_params[0]+\" \"+    # DWI image\n",
@@ -300,7 +300,7 @@
     "                             dwi_params[2]+\" \"+    # DWI bval\n",
     "                             dwi_params[3]+\"\\n\")   # Phase-encoding dir\n",
     "\n",
-    "    batch_dwibiascorrect_dwi2mask_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic11_dwi_distortionCorrection.sh \"+\n",
+    "    batch_dwibiascorrect_dwi2mask_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic11_dwi_distortionCorrection.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub +\" \"+\n",
     "                            dwi_params[4]+\" \"+ # PE dir as 0x1x0 (ie. like ANTS format))\n",
@@ -309,22 +309,22 @@
     "\n",
     "    #####batch_dwiintensitynorm_list comes later, outside loop.\n",
     "\n",
-    "    batch_T1w2dwi_5ttgen_dwi2response_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic13_T1w2dwi_5ttgen_dwi2response.sh \"+\n",
+    "    batch_T1w2dwi_5ttgen_dwi2response_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic13_T1w2dwi_5ttgen_dwi2response.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub+\"\\n\") \n",
     "\n",
     "    #batch_average_response_list.sh comes later, outside loop.\n",
     "    \n",
-    "    batch_dwi_2fod_tckgen_sift2_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic15_dwi_2fod_tckgen_sift2.sh \"+\n",
+    "    batch_dwi_2fod_tckgen_sift2_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic15_dwi_2fod_tckgen_sift2.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub+\" \"+\n",
     "                            scratchPath+\"\\n\")\n",
     "\n",
-    "    batch_create_diffusion_mask_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic16_create_diffusion_mask.sh \"+\n",
+    "    batch_create_diffusion_mask_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic16_create_diffusion_mask.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub+\"\\n\")\n",
     "\n",
-    "    batch_tck2connectome_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic17_tck2connectome.sh \"+\n",
+    "    batch_tck2connectome_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic17_tck2connectome.sh \"+\n",
     "                            results_path+\" \"+\n",
     "                            sub+\"\\n\")\n",
     "\n",
@@ -336,19 +336,19 @@
     "\n",
     "    pet_params = PET_scan_params(rawdata_remote_path, rawdata_local_path, sub)\n",
     "\n",
-    "    batch_extract_PET_data_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic18_extract_PET_data.sh \"+\n",
+    "    batch_extract_PET_data_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic18_extract_PET_data.sh \"+\n",
     "                                sub+\" \"+\n",
     "                                pet_params[0]+\" \"+\n",
     "                                pet_params[1]+\"\\n\")\n",
     "\n",
     "\n",
     "\n",
-    "    batch_extract_fmri_list.write(\"qsub -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic19_extract_fmri.sh \"+\n",
+    "    batch_extract_fmri_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic19_extract_fmri.sh \"+\n",
     "                                results_path+\" \"+\n",
     "                                sub+\" \"+\n",
     "                                \"Restingstate\"+\"\\n\")\n",
     "\n",
-    "# close the qsub submitters\n",
+    "# close the sbatch submitters\n",
     "batch_prefreesurf_list.close()\n",
     "batch_freesurf_list.close()\n",
     "batch_postfreesurf_list.close()\n",
@@ -369,12 +369,12 @@
     "\n",
     "#batch12_dwiintensitynorm\n",
     "batch_dwiintensitynorm_list = open(scripts_folder+\"/batch12_dwiintensitynorm.sh\",\"w\") #only one line: uses all subs. write outside loop.\n",
-    "batch_dwiintensitynorm_list.write(\"qsub -o output_dwiintensitynorm.txt -e error_dwiintensitynorm.txt generic12_dwiintensitynorm.sh\"+\" \"+results_path)\n",
+    "batch_dwiintensitynorm_list.write(\"sbatch -o output_dwiintensitynorm.txt -e error_dwiintensitynorm.txt generic12_dwiintensitynorm.sh\"+\" \"+results_path)\n",
     "batch_dwiintensitynorm_list.close()\n",
     "\n",
     "#batch14_averageresponse\n",
     "batch_averageresponse_list = open(scripts_folder+\"/batch14_averageresponse.sh\",\"w\") #only one line: uses all subs. write outside loop.\n",
-    "batch_averageresponse_list.write(\"qsub -o output_averageresponse.txt -e error_averageresponse.txt generic14_averageresponse.sh\"+\" \"+results_path)\n",
+    "batch_averageresponse_list.write(\"sbatch -o output_averageresponse.txt -e error_averageresponse.txt generic14_averageresponse.sh\"+\" \"+results_path)\n",
     "batch_averageresponse_list.close()"
    ]
   },
