un-hardcoded FIX_Training_file

--- a/Generate_subject_specific_HCPipe_parameters.ipynb
+++ b/Generate_subject_specific_HCPipe_parameters.ipynb
@@ -151,7 +151,9 @@
     "scratchPath=\"/path/to/remote/scratchDir\" #directory for MRtrix to create large tck files\n",
     "\n",
     "# local path: where to write the sbatch submitters\n",
-    "scripts_folder = \"/path/to/write/batchSubmitterScripts\""
+    "scripts_folder = \"/path/to/write/batchSubmitterScripts\"\n",
+    "\n",
+    "FIX_training_file=\"/path/to/*_Training.RData\""
    ]
   },
   {
@@ -263,7 +265,8 @@
     "    batch_icafix_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic06_icafix.sh \"+\n",
     "                              results_path+\" \"+\n",
     "                              sub+\" \"+\n",
-    "                              results_path+\"/\"+sub+\"/MNINonLinear/Results/Restingstate/Restingstate.nii.gz\"+\"\\n\")\n",
+    "                              resultsPath+\"/\"+sub+\"/MNINonLinear/Results/Restingstate/Restingstate.nii.gz\"+\" \"+\n",
+    "                              FIX_training_file+\"\\n\")\n",
     "\n",
     "    batch_postfix_list.write(\"sbatch -o output_\"+sub+\".txt -e error_\"+sub+\".txt generic07_postfix.sh \"+\n",
     "                              results_path+\" \"+\n",
